# kofe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.md  main.cpp
lib/: CMakeLists.txt
lib/core/: app_exceptions.cpp  app_exceptions.h  appexceptions.cpp  appexceptions.h  application.cpp  application.h  camera.cpp  camera.h  collectionof.h  color.cpp  color.h  colorable.cpp  colorable.h  defaultmaterial.cpp  defaultmaterial.h  deltatime.cpp  deltatime.h  everywhere.cpp  everywhere.h  freecamera.cpp  freecamera.h  fs.h  globaltransformation.cpp  icanbematrix.h  input.cpp  input.h  inputobserver.cpp  iprocess.cpp  iprocess.h  irendered.cpp  irendered.h  light.cpp  light.h  lightmaterial.cpp  lightmaterial.h  lightstorage.cpp  localtransformation.h  material.cpp  material.h  materialstorage.h  (+41 more)
lib/headers/core/: app_exceptions.h  application.h  camera.h  deltatime.h  graphics.h  inputobserver.h  light.h  lightstorage.h  material.h  object.h  opengl.h  phongmaterial.h  pointlight.h  projection.h  scene.h  space.h  texture.h  texturematerial.h  util.h
lib/headers/core/camera/: camera.h  freecamera.h
lib/headers/core/everywhere/: everywhere.h
lib/headers/core/graphics/: graphics.h  opengl.h
lib/headers/core/input/: input.h
lib/headers/core/interface/: icanbeeverywhere.h  icanbematrix.h  iprocess.h
lib/headers/core/light/: directionallight.h  light.h  pointlight.h  spotlight.h
lib/headers/core/material/: lightmaterial.h  material.h  phongmaterial.h  texturematerial.h
lib/headers/core/mesh/: mesh.h
lib/headers/core/misc/: axis.h  collectionof.h  color.h  deltatime.h  singleton.h  util.h
lib/headers/core/object/: model.h  modeldata.h  object.h
lib/headers/core/projection/: orthographic.h  perspective.h  projection.h
lib/headers/core/scene/: scene.h
lib/headers/core/shader/: shader.h
lib/headers/core/space/: space.h
lib/headers/core/storage/: lightstorage.h  lightstorage.inl  materialstorage.h  modelstorage.h  texturestorage.h
lib/headers/core/texture/: texture.h  texturedata.h  textureparams.h
lib/headers/core/transform/: globaltransformation.h  localtransformation.h  parenttransformation.h  transform.h  transformable.h
lib/headers/core/window/: window.h
lib/source/core/: app_exceptions.cpp  application.cpp
lib/source/core/camera/: camera.cpp  freecamera.cpp  targetcamera.cpp
lib/source/core/graphics/: graphics.cpp  opengl.cpp  vulkan.cpp
lib/source/core/input/: input.cpp  inputobserver.cpp
lib/source/core/interface/: icanbeeverywhere.cpp  icanbematrix.cpp  iprocess.cpp
lib/source/core/light/: directionallight.cpp  light.cpp  pointlight.cpp  spotlight.cpp
lib/source/core/material/: lightmaterial.cpp  material.cpp  phongmaterial.cpp  texturematerial.cpp
lib/source/core/mesh/: mesh.cpp
lib/source/core/misc/: axis.cpp  color.cpp  deltatime.cpp  vertex.cpp
lib/source/core/object/: model.cpp  modeldata.cpp  object.cpp
lib/source/core/projection/: orthographic.cpp  perspective.cpp  projection.cpp
lib/source/core/scene/: object.cpp  scene.cpp
lib/source/core/shader/: shader.cpp
lib/source/core/space/: space.cpp
lib/source/core/storage/: lightstorage.cpp  materialstorage.cpp  modelstorage.cpp  texturestorage.cpp
lib/source/core/texture/: texture.cpp  texturedata.cpp  textureparams.cpp
lib/source/core/transform/: parenttransformation.cpp  transform.cpp  transformable.cpp
lib/source/core/window/: screensize.cpp  window.cpp
lib/sources/core/: app_exceptions.cpp  application.cpp  axis.cpp  camera.cpp  collectionof.cpp  color.cpp  everywhere.cpp  freecamera.cpp  fs.cpp  icanbeeverywhere.cpp  icanbematrix.cpp  light.cpp  lightmaterial.cpp  localtransformation.cpp  material.cpp  materialstorage.cpp  opengl.cpp  orthographic.cpp  phongmaterial.cpp  pointlight.cpp  scene.cpp  screensize.cpp  shader.cpp  targetcamera.cpp  texture.cpp  texturematerial.cpp  transform.cpp  transformable.cpp  vertex.cpp  window.cpp
lib/sources/core/camera/: camera.cpp  freecamera.cpp
lib/sources/core/everywhere/: everywhere.cpp
lib/sources/core/light/: light.cpp  pointlight.cpp
lib/sources/core/material/: material.cpp  phongmaterial.cpp  texturematerial.cpp
lib/sources/core/mesh/: mesh.cpp
lib/sources/core/misc/: axis.cpp  collectionof.cpp  deltatime.cpp  fs.cpp  screensize.cpp  singleton.cpp  util.cpp
lib/sources/core/projection/: orthographic.cpp
lib/sources/core/scene/: object.cpp  scene.cpp
lib/sources/core/shader/: shader.cpp
lib/sources/core/storage/: lightstorage.cpp  materialstorage.cpp
lib/sources/core/transform/: globaltransformation.cpp  localtransformation.cpp  parenttransformation.cpp  transformable.cpp
pch/: pch.h
resources/models/human/: human.blend  human_lod-001.mtl
resources/models/lodtest/: lodtest.blend  lodtest_lod-002.mtl
resources/models/props/box/: box.blend  box.dae  box.mtl
resources/models/props/tables/: strange_table.blend  strange_table.mtl
resources/shaders/: default-light.frag  default.frag  default.vert  light-shader.frag  light-shader.vert  phong-shader.frag  phong-shader.vert  texture-shader.frag  texture-shader.vert
