set(PROJECT_CORE_TARGET core)
set(PROJECT_CORE_DIRECTORY ${PROJECT_LIB_DIRECTORY}/core)

file(GLOB_RECURSE PROJECT_CORE_HEADER_FILES *.h)
file(GLOB_RECURSE PROJECT_CORE_SOURCE_FILES *.cpp)

add_library(${PROJECT_CORE_TARGET} STATIC
    ${PROJECT_CORE_HEADER_FILES}
    ${PROJECT_CORE_SOURCE_FILES})

target_include_directories(${PROJECT_CORE_TARGET} PUBLIC
    ${THIRDPARTY_DIRECTORY}/glfw/include
    ${THIRDPARTY_DIRECTORY}/glm
    ${PROJECT_LIB_DIRECTORY})

target_link_libraries(${PROJECT_CORE_TARGET}
    glfw ${GLFW_LIBRARIES}
    glad-4.6-core stb)
